--- a/gb/20/10/16/n12481479.md
+++ b/gb/20/10/16/n12481479.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pfnspx389/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pfnspx389/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pfnspx389/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pfnspx389/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pfnspx389/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pfnspx389/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pfnspx389/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pfnspx389/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>欧洲批准波音737 MAX年底复飞 波音股价上涨</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1196238198-600x400.jpg" />
 <h6>图为一架波音777X飞机在华盛顿州埃弗雷特的佩恩机场进行首飞。(JASON REDMOND/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年10月17日讯】（大纪元记者谢佳宣编译报导）在<ahref="https://github.com/pfnspx389/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>航空安全局（EASA）批准<ahref="https://github.com/pfnspx389/djy/blob/master/gb/tag/%E6%B3%A2%E9%9F%B3.md#1">波音</a>737 MAX客机可在2020年底前重返天空后，周五（16日），波音连同相关产业的股价闻讯上涨。</p>
-<p><ahref="https://github.com/pfnspx389/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>航空安全局执行董事帕特里克·基伊（Patrick Ky）16日接受彭博社采访时说：“我们的分析表明，（737 MAX）是安全的，它达到的安全水平对我们来说已经足够高了。”基伊说，在9月进行试飞后，欧洲航空安全局正在进行最后的文件审查，预计下个月将发布适航指令草案。其后有为期四周的公众意见征询。</p>
-<p><ahref="https://github.com/pfnspx389/djy/blob/master/gb/tag/%E6%B3%A2%E9%9F%B3.md#1">波音</a>公司发言人则表示，他们将继续“与全球监管机构密切合作，以重新认证飞机”。</p>
+	<p>【大纪元2020年10月17日讯】（大纪元记者谢佳宣编译报导）在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>航空安全局（EASA）批准<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B3%A2%E9%9F%B3.md#1">波音</a>737 MAX客机可在2020年底前重返天空后，周五（16日），波音连同相关产业的股价闻讯上涨。</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>航空安全局执行董事帕特里克·基伊（Patrick Ky）16日接受彭博社采访时说：“我们的分析表明，（737 MAX）是安全的，它达到的安全水平对我们来说已经足够高了。”基伊说，在9月进行试飞后，欧洲航空安全局正在进行最后的文件审查，预计下个月将发布适航指令草案。其后有为期四周的公众意见征询。</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B3%A2%E9%9F%B3.md#1">波音</a>公司发言人则表示，他们将继续“与全球监管机构密切合作，以重新认证飞机”。</p>
 <p>波音737 MAX客机于2019年3月，因两起坠机事故导致机上346人全部死亡而停飞，至今已停飞逾一年半。该事故也导致波音公司前CEO丹尼斯·穆伦堡（Dennis Muilenburg）辞职。</p>
 <p>基伊表示，他们与波音公司讨论过，有了第三个感应器，737 MAX就可以达到更高的安全水平。预计开发合成感应器（synthetic sensor）将需要20到24个月的时间。这款解决方案将使用在737 MAX 10机型，以及其它的737 MAX机型。</p>
 <p>虽然波音737 MAX客机有望在今年底前于欧洲复飞，但美国联邦航空管理局（FAA）还在审核当中。FAA局长史蒂夫·迪克森（Steve Dickson）上月底试飞737 MAX，他表示飞机的控制感觉“非常舒适”。</p>
@@ -21,41 +21,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/9/4/n12381349.md#1">亚马逊首购波音767货机 应付庞大网购需求</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/1/n12443934.md#1">波音迁走客机生产线？华州州长回应</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/4/n12451280.md#1">波音将所有787梦幻机生产移到南卡</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/15/n12477259.md#1">波音九月份商用飞机销售量为零</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/9/4/n12381349.md#1">亚马逊首购波音767货机 应付庞大网购需求</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/10/1/n12443934.md#1">波音迁走客机生产线？华州州长回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/10/4/n12451280.md#1">波音将所有787梦幻机生产移到南卡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/10/15/n12477259.md#1">波音九月份商用飞机销售量为零</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/pfnspx389/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/15/n12477848.md#1">【一线采访视频版】青岛瞒疫 新疫情十一前爆发</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/15/n12477926.md#1">【远见快评】亨特坑爹 拜登背后4重危机</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/16/n12479705.md#1">【西岸观察】亨特硬盘门续集 白手套叶简明登场</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12474500.md#1">深圳特区大会 习近平讲话4次咳嗽且3次停顿</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12475938.md#1">红二代分裂后 传军中能打仗将领对习近平不满</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12474244.md#1">深圳特区40年会延迟半小时开始 李嘉诚未上榜</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12476186.md#1">偶遇周润发超市买菜 曾华倩晒两人亲昵合照</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/15/n12479059.md#1">58岁梁朝伟近照曝光 苍老容貌惊呆网友</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12476039.md#1">阿娇伤愈后首次直播 短发造型被指气质下降</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/13/n12473848.md#1">晒与唐嫣贴头搂肩合照 佘诗曼直呼姐妹重逢</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/13/n12473463.md#1">发文为青岛加油引关注 黄晓明探亲遭遇疫情</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/15/n12477519.md#1">夫妻的长相会越来越像吗？ 美国研究告诉你</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/12/n12471132.md#1">1张纸改善视力！胡乃文推荐3碗药膳 养眼补肾</a></li>
-<li><a href="https://github.com/pfnspx389/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pfnspx389/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pfnspx389/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/16/n12481479.htm">欧洲批准波音737 MAX年底复飞 波音股价上涨</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/16/n12481479.htm">欧洲批准波音737 MAX年底复飞 波音股价上涨</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pfnspx389/djy/blob/master/gb/20/10/16/n12481479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pfnspx389/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pfnspx389/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pfnspx389/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pfnspx389/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pfnspx389/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/10/16/n12481479.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
